# master-deusto

big-data/practica2/: dev.ipynb  pyproject.toml
ml/linear-regresion/: Practica-reg.ipynb
nlp/recomender/: dev.ipynb  pyproject.toml
rl/2Qlearning/: Makefile  dev.ipynb  frozen-study.db  pyproject.toml  taxi-study.db
rl/2Qlearning/src/: environment.py  main.py  optimizer.py  test.py  train.py
rl/2Qlearning/src/algorithm/: __init__.py  doubleqlearning.py  qlearning.py  sarsa.py
rl/snake/: pyproject.toml
rl/snake/src/: checkenv.py  snakeenv.py  train.py
vision/practica1/: main.py
vision/practica2/: main.py
