[tool.poetry]
name = "recomender"
version = "0.1.0"
description = ""
authors = ["Asier Villar <asiervillar@outlook.es>"]
readme = "README.md"
packages = [{include = "recomender", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.41.2"
ipykernel = "^6.29.2"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
