[project]
name = "DoubleQLearning"
version = "0.0.1"
requires-python = ">3.10"
dependencies = [
    "numpy==1.26.0",
    "gym==0.26.2",
    "pygame==2.5.2",
    "optuna==3.3.0"
]

[project.optional-dependencies]
dev = ["black", "ruff", "isort", "mypy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
ignore = [
    "E501", # line too long
    "E731", # Do not assign a `lambda` expression, use a `def`
    "E712", # comparison to True should be 'if cond is True:' or 'if cond:'
]